--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <meta name="description" content="">
       <meta name="author" content="">
       <!-- site icons -->
-      <link rel="icon" href="img/fevicon.png" type="image/png" />
+      <link rel="icon" href="fevicon.png" type="image/png" />
       <!-- bootstrap css -->
       <link rel="stylesheet" href="bootstrap.min.css" />
       <!-- site css -->
@@ -58,7 +58,7 @@
                <div class="row">
                   <div class="col-md-4">
                      <div class="full">
-                        <span class="toggle_icon" style="cursor:pointer" onclick="openNav()"><img src="img/menu_icon.png" alt="#" /></span>
+                        <span class="toggle_icon" style="cursor:pointer" onclick="openNav()"><img src="menu_icon.png" alt="#" /></span>
                         <div class="logo_circle">
                            <a href="index.html"><img class="img-responsive" src="g3.png" alt="#" width="137px" height="23px"/></a>
                         </div>
@@ -67,7 +67,7 @@
                   <div class="col-md-8">
                      <div class="float-right">
                         <ul class="top_links">
-                           <li><a href="contact.html"><img src="images/profile_icon.png" alt="#" /></a></li>
+                           <li><a href="contact.html"><img src="profile_icon.png" alt="#" /></a></li>
                         </ul> 
                      </div>
                   </div>
