--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
    <!-- custom css -->
    <link rel="stylesheet" href="custom.css" />
    <!-- wow animation css -->
-   <link rel="stylesheet" href="css/animate.css" />
+   <link rel="stylesheet" href="animate.css" />
    <!-- Revolution Loaling Fonts and Icons  -->
    <link rel="stylesheet" href="js/revolution/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
    <!-- Revolution style Sheets  -->
