--- a/brainstorming.html
+++ b/brainstorming.html
@@ -70,7 +70,7 @@
                   <div class="col-md-8">
                      <div class="float-right">
                         <ul class="top_links">
-                           <li><a href="contact.html"><img src="images/profile_icon.png" alt="#" /></a></li>
+                           <li><a href="contact.html"><img src="profile_icon.png" alt="#" /></a></li>
                         </ul>
                      </div>
                   </div>
@@ -113,7 +113,7 @@
                                        </div>
                                        <div class="full testi_slide">
                                           <div class="full heading_s1">
-                                          <p style="font-size: 20px; text-align: justify;"><img src="images/layout_img/quate_left_test.png" alt="#" />1. Make reinforcements to prevent damage. Check roof tiles, slates, etc. for looseness. <br>2. Ensure proper drainage. Ensure that gutters, rain pipes, and similar items are clean and free from leaves, dirt, etc. <br>3. Fasten objects that may be blown away. Reinforce TV antennas and other objects as necessary.</p>
+                                          <p style="font-size: 20px; text-align: justify;"><img src="quate_left_test.png" alt="#" />1. Make reinforcements to prevent damage. Check roof tiles, slates, etc. for looseness. <br>2. Ensure proper drainage. Ensure that gutters, rain pipes, and similar items are clean and free from leaves, dirt, etc. <br>3. Fasten objects that may be blown away. Reinforce TV antennas and other objects as necessary.</p>
 
                                           <p>Typhoons impact can be lessened, by building reinforcements, ensuring proper drainage, and fastening objects. 
                                              Constructing barriers, reinforcing building structures, and planting trees can help prevent flooding, withstand strong winds, heavy rainfall, and act as windbreakers. Objects that might blow away can be stopped from causing harm and damage by being secured. Water accumulation and flooding, which can seriously harm homes and infrastructure, can be avoided with proper drainage. These actions can lessen damage, protect people and property, and boost preparedness for typhoons in the future.</p>
