--- a/brainstorming.html
+++ b/brainstorming.html
@@ -141,7 +141,7 @@
            <div class="full heading_s1">
            <h3 style="font-size: 35px;">5 Whys</h3>
            <div class="typhoonborder">
-           <img src="L5whyss.JPG" alt="Typhoon Ompong Path" height="350px">
+           <img src="L5whyss.JPG" alt="5 Whys" height="350px">
            </div>
            </div>
            </div>
@@ -155,7 +155,7 @@
            <div class="full heading_s1">
            <h3 style="font-size: 50px;">Mind Map</h3>
            <div class="typhoonborder">
-           <img src="Lmindmap.JPG" alt="Typhoon Ompong Path" height="500px">
+           <img src="Lmindmap.JPG" alt="Mind Map" height="500px">
            </div>
            </div>
            </div>
@@ -169,7 +169,7 @@
            <div class="full heading_s1">
            <h3 style="font-size: 50px;">Diagram</h3>
            <div class="typhoonborder">
-           <img src="Ldiagram.JPG" alt="Typhoon Ompong Path" height="450px">
+           <img src="Ldiagram.JPG" alt="Diagram" height="450px">
            </div>
            </div>
            </div>
@@ -183,7 +183,7 @@
            <div class="full heading_s1">
            <h3 style="font-size: 35px;">FishBone Diagram</h3>
            <div class="typhoonborder">
-           <img src="Lfishbone.JPG" alt="Typhoon Ompong Path" height="350px">
+           <img src="Lfishbone.JPG" alt="FishBone Diagram" height="350px">
            </div>
            </div>
            </div>
