--- a/brainstorming.html
+++ b/brainstorming.html
@@ -61,7 +61,7 @@
                <div class="row">
                   <div class="col-md-4">
                      <div class="full">
-                        <span class="toggle_icon" style="cursor:pointer" onclick="openNav()"><img src="img/menu_icon.png" alt="#" /></span>
+                        <span class="toggle_icon" style="cursor:pointer" onclick="openNav()"><img src="menu_icon.png" alt="#" /></span>
                         <div class="logo_circle">
                            <a href="index.html"><img class="img-responsive" src="g3.png" alt="#" width="137px" height="23px"/></a>
                         </div>
@@ -141,7 +141,7 @@
            <div class="full heading_s1">
            <h3 style="font-size: 35px;">5 Whys</h3>
            <div class="typhoonborder">
-           <img src="L5whyss.JPG" alt="5 Whys" height="350px">
+           <img src="L5whyss.jpg" alt="5 Whys" height="350px">
            </div>
            </div>
            </div>
@@ -183,7 +183,7 @@
            <div class="full heading_s1">
            <h3 style="font-size: 35px;">FishBone Diagram</h3>
            <div class="typhoonborder">
-           <img src="Lfishbone.JPG" alt="FishBone Diagram" height="350px">
+           <img src="Lfishbone.jpg" alt="FishBone Diagram" height="350px">
            </div>
            </div>
            </div>
