--- a/contact.html
+++ b/contact.html
@@ -13,19 +13,19 @@
       <meta name="description" content="">
       <meta name="author" content="">
       <!-- site icons -->
-      <link rel="icon" href="img/fevicon.png" type="image/png" />
+      <link rel="icon" href="fevicon.png" type="image/png" />
       <!-- bootstrap css -->
-      <link rel="stylesheet" href="css/bootstrap.min.css" />
+      <link rel="stylesheet" href="bootstrap.min.css" />
       <!-- site css -->
-      <link rel="stylesheet" href="css/style.css" />
+      <link rel="stylesheet" href="style.css" />
       <!-- responsive css -->
-      <link rel="stylesheet" href="css/responsive.css" />
+      <link rel="stylesheet" href="responsive.css" />
       <!-- colors css -->
-      <link rel="stylesheet" href="css/colors.css" />
+      <link rel="stylesheet" href="colors.css" />
       <!-- custom css -->
-      <link rel="stylesheet" href="css/custom.css" />
+      <link rel="stylesheet" href="custom.css" />
       <!-- wow animation css -->
-      <link rel="stylesheet" href="css/animate.css" />
+      <link rel="stylesheet" href="animate.css" />
       <!-- Revolution Loaling Fonts and Icons  -->
       <link rel="stylesheet" href="js/revolution/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
       <!-- Revolution style Sheets  -->
@@ -33,8 +33,8 @@
       <link rel="stylesheet" href="js/revolution/css/layers.css">
       <link rel="stylesheet" href="js/revolution/css/navigation.css">
       <!-- owl stylesheets -->
-      <link rel="stylesheet" href="css/owl.carousel.min.css">
-      <link rel="stylesheet" href="css/owl.theme.default.css">
+      <link rel="stylesheet" href="owl.carousel.min.css">
+      <link rel="stylesheet" href="owl.theme.default.css">
       <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -69,7 +69,7 @@ input {
                <div class="row">
                   <div class="col-md-4">
                      <div class="full">
-                        <span class="toggle_icon" style="cursor:pointer" onclick="openNav()"><img src="img/menu_icon.png" alt="#" /></span>
+                        <span class="toggle_icon" style="cursor:pointer" onclick="openNav()"><img src="menu_icon.png" alt="#" /></span>
                         <div class="logo_circle">
                            <a href="index.html"><img class="img-responsive" src="g3.png" alt="#" width="137px" height="23px"/></a>
                         </div>
@@ -78,7 +78,7 @@ input {
                   <div class="col-md-8">
                      <div class="float-right">
                         <ul class="top_links">
-                           <li><a href="contact.html"><img src="images/profile_icon.png" alt="#" /></a></li>
+                           <li><a href="contact.html"><img src="profile_icon.png" alt="#" /></a></li>
                         </ul> 
                      </div>
                   </div>
@@ -152,16 +152,16 @@ input {
       </section>
       
       <!-- jQuery (necessary for Bootstrap's JavaScript) -->
-      <script src="js/jquery.min.js"></script>
-      <script src="js/popper.min.js"></script>
-      <script src="js/bootstrap.min.js"></script>
+      <script src="jquery.min.js"></script>
+      <script src="popper.min.js"></script>
+      <script src="bootstrap.min.js"></script>
       <!-- javascript -->
-      <script src="js/owl.carousel.js"></script>
+      <script src="owl.carousel.js"></script>
       <!-- wow animation -->
-      <script src="js/wow.js"></script>
+      <script src="wow.js"></script>
       <!-- menumaker -->
-      <script src="js/menumaker.js"></script>
+      <script src="menumaker.js"></script>
       <!-- custom js -->
-      <script src="js/custom.js"></script>
+      <script src="custom.js"></script>
    </body>
 </html>
