--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@ input {
                                        <div class="col-sm-4">
                                           <div class="full cont_info">
                                              <p style="color: white; text-decoration: none;">aaa</p>
-                                             <li><i class="fa fa-envelope"  src="images/arr_logo.png"></i></li>
+                                             <li><i class="fa fa-envelope"  src="arr_logo.png"></i></li>
                                              <span>ap.julianna.delacruz@apecschools.edu.ph</span>
                                           </div>
                                        </div>
@@ -119,7 +119,7 @@ input {
                                        <div class="col-sm-4">
                                           <div class="full cont_info">
                                              <p style="color: white; text-decoration: none;">aaaaaaaaaa</p>
-                                             <li><i class="fa fa-envelope"  src="images/arr_logo.png"></i></li>
+                                             <li><i class="fa fa-envelope"  src="arr_logo.png"></i></li>
                                              <span>ap.aliahdominique.delmundo@apecschools.edu.ph </span>
                                           </div>
                                        </div>
@@ -130,14 +130,14 @@ input {
                                        <div class="col-sm-4">
                                           <div class="full cont_info">
                                              <p style="color: white">aa</p>
-                                             <li><i class="fa fa-envelope"  src="images/arr_logo.png"></i></li>
+                                             <li><i class="fa fa-envelope"  src="arr_logo.png"></i></li>
                                              <span>ap.liamdylan.zorca@apecschools.edu.ph</span>
                                           </div>
                                        </div>
 
                                        <div class="col-sm-4">
                                           <div class="full cont_info">
-                                             <li><i class="fa fa-envelope"  src="images/arr_logo.png"></i></li>
+                                             <li><i class="fa fa-envelope"  src="arr_logo.png"></i></li>
                                              <span>ap.denisse.reyes@apecschools.edu.ph</span>
                                           </div>
                                        </div>
