--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                        </div>
                                        <div class="full testi_slide">
                                           <div class="full heading_s1">
-                                          <p style="font-size: 20px; text-align: justify;"><img src="images/layout_img/quate_left_test.png" alt="#" /><a target="_blank" href="https://reliefweb.int/report/philippines/philippines-ndcc-update-typhoon-frank-situation-report-no-24" style="color: blue;"> Link 1</a> 
+                                          <p style="font-size: 20px; text-align: justify;"><img src="quate_left_test.png" alt="#" /><a target="_blank" href="https://reliefweb.int/report/philippines/philippines-ndcc-update-typhoon-frank-situation-report-no-24" style="color: blue;"> Link 1</a> 
                                           <span>,</span><a target="_blank" href="https://studylib.net/doc/8455182/typhoon-frank-v2-290608" style="color: blue;"> Link 2 </a> 
                                           <br><a target="_blank" href="https://www.researchgate.net/publication/344471616_Adaptation_and_Coping_Strategies_to_Extreme_Climate_Conditions_Impact_of_Typhoon_Frank_in_Selected_Sites_in_Iloilo_Philippines" style="color: blue;"> Link 3 </a> 
                                           <span>,</span><a target="_blank" href="https://reliefweb.int/report/philippines/philippines-ndcc-update-typhoon-frank-situation-report-no-33" style="color: blue;"> Link 4 </a> 
